<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f4f4f4">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/home_recycler_view_topics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/md_white_1000"></android.support.v7.widget.RecyclerView>



        <LinearLayout
            android:id="@+id/home_lin_utility_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_900"
            android:layout_marginTop="15.6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/utility_service"
                android:textColor="#ffffff"
                android:textSize="25dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/home_recycler_view_utility_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"></android.support.v7.widget.RecyclerView>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginTop="15.6dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/coupon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15.6dp"
                    android:textColor="#000"
                    android:text="@string/coupon_cooperation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_cooperation_content" />

            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/chevron_right"
                android:padding="5dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.6dp"
            android:background="@color/md_white_1000"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_topics"
                android:textColor="#000"
                android:textSize="25dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/home_recycler_view_hot_topics"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.6dp"
            android:padding="20dp"
            android:background="@color/md_white_1000"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/register_to_get_the_experience_better"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15.6dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/md_white_1000"
                        android:text="@string/register"
                        android:background="@drawable/register_bg"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/md_white_1000"
                        android:layout_marginLeft="9.6dp"
                        android:background="@drawable/login_bg"
                        android:text="@string/login"/>

                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:layout_marginLeft="35dp"
                android:src="@drawable/tiki_logo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_pink_300"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tiki_deal"
                android:textColor="#ffffff"
                android:textSize="25dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/home_recycler_view_tiki_deal"
                android:layout_width="match_parent"
                android:background="@color/md_white_1000"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="20dp"></android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>